update UI for mobile phone

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="messages-wrapper">
         <div class="chat-container">
             <div class="messages" id="messages"></div>
-            <div class="input-area">
+            <div class="input-area mobile-input-area">
                 <div class="input-row">
                     <textarea id="userInput" placeholder="How can I help you?..."></textarea>
                 </div>
@@ -39,12 +39,6 @@
                             <li data-value="naive" class="mode-option">Naive </li>
                         </ul>
                     </div>
-                    <!--
-                        <select id="modelSelect" class="model-dropdown">
-                        <option value="ollama" selected>Ollama</option>
-                        <option value="openai">gpt-4o-mini</option>
-                    </select>
-                    -->
                     <button id="sendButton" type="button">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <line x1="22" y1="2" x2="11" y2="13"></line>
